# offensive-psremoting

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/offensive_psremoting/: __init__.py  cli.py
tools/: print_versions.py
