[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offensive-psremoting"
version = "0.1.4"
description = "A PSRP/WSMan (WinRM) interactive PowerShell Remoting REPL client with raw/struct/auto modes."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "RedteamNotes"}
]
keywords = ["powershell", "psremoting", "winrm", "wsman", "psrp", "repl"]
dependencies = [
  "pypsrp",
  "pyspnego",
  "requests",
  "urllib3",
]

[project.scripts]
opsr = "offensive_psremoting.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["offensive_psremoting*"]
